--- a/IVAP.Syncer/MainWindow.xaml
+++ b/IVAP.Syncer/MainWindow.xaml
@@ -1,8 +1,54 @@
-﻿<Window x:Class="IVAP.Syncer.MainWindow"
+﻿<Controls:MetroWindow  x:Class="IVAP.Syncer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="IVAP Syncer" Height="350" Width="525">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Title="Syncererer" Height="600" Width="800" WindowStyle="ThreeDBorderWindow">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Green.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/FlatButton.xaml" />
+                <ResourceDictionary Source="/Resources/Icons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-        <TextBlock Height="21" HorizontalAlignment="Left" Margin="193,101,0,0" Name="textBlock1" Text="Tirah Rapid Assessment " VerticalAlignment="Top" Width="125" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Tirah Rapid Assessment Survey Syncer" Grid.Column="1" Grid.Row="0" FontSize="22" HorizontalAlignment="Center" TextWrapping="Wrap" FontWeight="Bold" TextAlignment="Center" />
+        <Grid Grid.Row="1" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBox Controls:TextboxHelper.ClearTextButton="False" Controls:TextboxHelper.Watermark="Upload your CSV file here." Grid.Row="0"  />
+            <Button Style="{DynamicResource SquareButtonStyle}" Content="Upload File" Grid.Row="1"/>
+        </Grid>
+        <Grid Grid.Row="2" Grid.Column="1">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <Controls:AppBarButton
+   VerticalAlignment="Top"
+   MetroImageSource="{StaticResource appbar_connect}"
+   Foreground="{DynamicResource BlackBrush}"
+   Content="scan" />
+            <Controls:ProgressRing IsActive="True" Grid.Row="2" />
+        </Grid>
     </Grid>
-</Window>
+</Controls:MetroWindow >
