--- a/IVAP.Syncer/MainWindow.xaml
+++ b/IVAP.Syncer/MainWindow.xaml
@@ -34,8 +34,8 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBox Controls:TextboxHelper.ClearTextButton="False" Controls:TextboxHelper.Watermark="Upload your CSV file here." Grid.Row="0"  />
-            <Button Style="{DynamicResource SquareButtonStyle}" Content="Upload File" Grid.Row="1"/>
+            <TextBox x:Name="fileTxtBox" Controls:TextboxHelper.ClearTextButton="False" Controls:TextboxHelper.Watermark="Upload your CSV file here." Grid.Row="0"  />
+            <Button Style="{DynamicResource SquareButtonStyle}" Content="Upload File" Grid.Row="1" Click="Button_Click"/>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -43,12 +43,13 @@
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Controls:AppBarButton
+            <!--<Controls:AppBarButton
    VerticalAlignment="Top"
    MetroImageSource="{StaticResource appbar_connect}"
    Foreground="{DynamicResource BlackBrush}"
-   Content="scan" />
-            <Controls:ProgressRing IsActive="True" Grid.Row="2" />
+   Content="scan" />-->
+            <Button x:Name="syncButton" Grid.Row="0" Content="Start Sync" Click="syncButton_Click"></Button>
+            <Controls:ProgressRing x:Name="Loader" IsActive="False" Grid.Row="2" />
         </Grid>
     </Grid>
 </Controls:MetroWindow >
