--- a/IVAP.Syncer/MainWindow.xaml
+++ b/IVAP.Syncer/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Syncererer" Height="600" Width="800" WindowStyle="ThreeDBorderWindow">
+        Title="syncererer" Height="600" Width="800" WindowStyle="ThreeDBorderWindow">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -27,15 +27,15 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Tirah Rapid Assessment Survey Syncer" Grid.Column="1" Grid.Row="0" FontSize="22" HorizontalAlignment="Center" TextWrapping="Wrap" FontWeight="Bold" TextAlignment="Center" />
+        <TextBlock Text="tirah rapid assessment survey syncer" Grid.Column="1" Grid.Row="0" FontSize="22" HorizontalAlignment="Center" TextWrapping="Wrap" FontWeight="Bold" TextAlignment="Center" />
         <Grid Grid.Row="1" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <TextBox x:Name="fileTxtBox" Controls:TextboxHelper.ClearTextButton="False" Controls:TextboxHelper.Watermark="Upload your CSV file here." Grid.Row="0"  />
-            <Button Style="{DynamicResource SquareButtonStyle}" Content="Upload File" Grid.Row="1" Click="Button_Click"/>
+            <TextBox x:Name="fileTxtBox" Controls:TextboxHelper.ClearTextButton="False" Controls:TextboxHelper.Watermark="your csv file that is to be synced" Grid.Row="0"  />
+            <Button Style="{DynamicResource SquareButtonStyle}" Content="select file" Grid.Row="1" Click="Button_Click"/>
         </Grid>
         <Grid Grid.Row="2" Grid.Column="1">
             <Grid.RowDefinitions>
@@ -48,7 +48,7 @@
    MetroImageSource="{StaticResource appbar_connect}"
    Foreground="{DynamicResource BlackBrush}"
    Content="scan" />-->
-            <Button x:Name="syncButton" Grid.Row="0" Content="Start Sync" Click="syncButton_Click"></Button>
+            <Button x:Name="syncButton" Grid.Row="0" Content="start sync" Click="syncButton_Click"></Button>
             <Controls:ProgressRing x:Name="Loader" IsActive="False" Grid.Row="2" />
         </Grid>
     </Grid>
